fixed body overflow

--- a/assets/css/components/reset/body.scss
+++ b/assets/css/components/reset/body.scss
@@ -4,6 +4,7 @@ body {
 	color: $black;
 	font-weight: 300;
 	min-height: 100%;
+	overflow-x: hidden;
 
 	// events
 	&.modal-open {
